--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
   <head>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="animate.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body ng-controller="mainCtrl">
-    <div class="main-container">
-      <h1> DevMountain Chat Room </h1>
-      <form ng-submit="postData()">
+    <div class="main-container wow bounceInUp">
+        <img src="https://devmounta.in/img/logowhiteblue.png" width="100%" class="devImg wow fadeInRight" data-wow-delay=".6s"/>
+        <h1 class="wow fadeInLeft" data-wow-delay=".8s"> Chat Room </h1>
+        <form ng-submit="postData(message)" class="wow flipInY" data-wow-delay="1.5s">
         <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
       </form>
+    </div>
+      <div class="text-container wow fadeInUpBig" data-wow-delay="1s">
       <div class="messages-container">
-        <p ng-repeat="message in messages"> {{message.text}} </p>
+        <p ng-repeat="message in messages">
+          {{message.text}} </p>
       </div>
     </div>
-    <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
+    <script src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
     <script src="js/app.js"></script>
     <script src="js/mainCtrl.js"></script>
     <script src="js/parseService.js"></script>
